Misc findbugs fixes, added test directory for junit tests.